<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_root"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#333"
              android:padding="10dp">
              
     <ScrollView android:id="@+id/ScrollView01"
 				android:layout_width="fill_parent" 
 				android:layout_below="@+id/ImageView01"
 				android:layout_height="fill_parent"> 
 				
 		<LinearLayout 
			android:id="@+id/graficos" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			xmlns:android="http://schemas.android.com/apk/res/android" 
			android:orientation="vertical"
			android:padding="1dp">
 				
	    <ImageView android:id="@+id/image"
	    			android:layout_width="fill_parent"
	              	android:layout_height="20dp"
	               	android:layout_marginBottom="5dp"
	               	android:src="@drawable/icon"
	               	android:scaleType="centerInside"/>
	               	
	    <TextView android:id="@+id/text"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:gravity="center"
	              android:textColor="#FFF"
	              android:layout_marginBottom="5dp"
	              android:text="@string/acercade_titulo"
	              android:textSize="20dp"/>
	              
	    <TextView android:id="@+id/txtTitDatos"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:gravity="fill"
	              android:layout_marginBottom="2dp"
	              style="?android:attr/listSeparatorTextViewStyle"
	              android:text="@string/acercade_TitDatos"/>
	              
   	    <TextView android:id="@+id/txtParDatos"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:gravity="fill"
	              android:textColor="#AAA"
	              android:layout_marginBottom="2dp"
	              android:text="@string/acercade_ParDatos"
	              android:textSize="12dp"/>
	              
          <TextView android:id="@+id/txtLinkDatos"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textColor="#AAA"
              android:textSize="12dp"
              android:text="@string/acercade_linkDatos"
              android:layout_marginBottom="15dp"
              android:autoLink="web"
              />
    <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/acercade_autor_cab"
              style="?android:attr/listSeparatorTextViewStyle"
              android:layout_marginBottom="15dp"
              /> 
              
     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textColor="#AAA"
              android:textSize="12dp"
              android:text="@string/acercade_autor"
              android:layout_marginBottom="5dp"
              android:autoLink="email"
              />
              
   <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/acercade_titDonacion"
              style="?android:attr/listSeparatorTextViewStyle"
              android:layout_marginBottom="15dp"
              /> 
              
     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textColor="#AAA"
              android:textSize="12dp"
              android:text="@string/acercade_parDonacion"
              android:layout_marginBottom="5dp"
              />
     
     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textColor="#AAA"
              android:textSize="12dp"
              android:text="@string/acercade_linkDonacion"
              android:layout_marginBottom="5dp"
              android:autoLink="web"
              />

     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/acercade_titTraduccion"
              style="?android:attr/listSeparatorTextViewStyle"
              android:layout_marginBottom="15dp"
              /> 
              
     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textColor="#AAA"
              android:textSize="12dp"
              android:text="@string/acercade_parTraduccion"
              android:layout_marginBottom="5dp"
              />  
              
     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/acercade_titGracias"
              style="?android:attr/listSeparatorTextViewStyle"
              android:layout_marginBottom="15dp"
              /> 
              
     <TextView android:id="@+id/text"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:textColor="#AAA"
              android:textSize="12dp"
              android:text="@string/acercade_parGracias"
              android:layout_marginBottom="5dp"
              />            
	      </LinearLayout>                
       </ScrollView>             
</LinearLayout>
